# DSA_Project2

./: CMakeLists.txt  README.md  main
data/: dataOrganize.py
data/cppOrganized/: AllPokemon-organized.txt
data/raw_files/: gen1ou-0.json  gen1uu-0.json  gen2ou-0.json  gen3ou-0.json  gen4ou-0.json
src/: app_ui.cpp  hashTable.h  linkedLists.h  main.cpp  pokemon.h  trieTree.h
test/: test.cpp  test.h
